--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/arrow1.png
     - assets/arrow2.png
     - assets/apple.png
+    - assets/quiz.png
     - assets/background-main.png
     - assets/alphabet/fruits1.png
     - assets/alphabet/fruits2.png
